# sanctioner-app

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  progress.md  pyproject.toml  task_plan.md
.claude/agent-memory/data-quality-reviewer/: MEMORY.md  enforcement-baseline-2026-05-17.md  eu-consolidated-baseline-2026-05-16.md  ofac-nonsdn-baseline.md  ofac-parser-gaps.md  ofac-sdn-baseline-2026-05-16.md
.claude/agents/: architecture-auditor.md  data-quality-reviewer.md
.claude/commands/: audit.md  close.md
.claude/hooks/: post-python-edit.sh
.claude/skills/data-acquisition-patterns/: SKILL.md
.claude/skills/data-quality-review/: SKILL.md
.claude/skills/documentation-standard/: SKILL.md
.claude/skills/fastapi-testing/: SKILL.md
.claude/skills/fastapi-testing/references/: sanctioner-app-priorities.md  stack-setup.md  test-patterns.md
.claude/skills/ingestion-pipeline-patterns/: SKILL.md
.claude/skills/software-architect-review/: SKILL.md
.claude/skills/software-architect-review/references/: extensibility-patterns.md  fastapi-rules.md  review-framework.md
.claude/skills/sqlalchemy-alembic-patterns/: SKILL.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fcacbc15356_enable_pgvector_and_pg_trgm_extensions.py  930864a558eb_create_entity_tables_vector_store_and_.py  a06fa9eb0762_add_partial_unique_index_on_vessels_imo_.py  b3d7e2f14a90_make_vector_dim_configurable.py
backend/app/: config.py  dependencies.py  exceptions.py  logging.py  main.py
backend/app/db/: README.md  models.py  session.py
backend/tests/: README.md  conftest.py
backend/tests/test_api/: test_health.py
ingestion/: Dockerfile  README.md  conftest.py  pyproject.toml
ingestion/pipeline/: acquisition.py  chunk_store.py  config.py  db.py  db_models.py  embeddings.py  exceptions.py  extraction.py  hashing.py  loaders.py  models.py  relationships.py  runner.py  upsert.py
ingestion/pipeline/chunking/: regulation_chunker.py  text_chunker.py
ingestion/pipeline/sources/: README.md  enforcement.py  eu_regulation.py  eu_sanctions.py  general_licenses.py  guidance.py  ofac_faq.py  ofac_nonsdn.py  ofac_sdn.py
ingestion/scripts/: backfill_embeddings.py  download_sources.py  ingest_all.py  ingest_enforcement.py  ingest_eu_regulation.py  ingest_eu_sanctions.py  ingest_general_licenses.py  ingest_guidance.py  ingest_incremental.py  ingest_ofac_faq.py  ingest_ofac_nonsdn.py  ingest_ofac_sdn.py
ingestion/tests/: test_acquisition.py  test_chunk_store.py  test_embeddings.py  test_enforcement.py  test_eu_sanctions_parsing.py  test_extraction.py  test_guidance.py  test_hashing.py  test_ofac_nonsdn.py  test_ofac_sdn_parsing.py  test_relationships.py  test_runner.py  test_text_chunker.py
