[project]
name = "sanctions-screening-ingestion"
version = "0.1.0"
description = "Data ingestion pipeline for the Sanctions Screening Assistant"
requires-python = ">=3.13"
dependencies = [
    "sanctions-screening-backend",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "boto3>=1.35.0",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "ASYNC",
    "S",
    "T20",
]
ignore = [
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
sanctions-screening-backend = { path = "../backend", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
